; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/ncsw/Peripherals/FM/extr_fm_muram.c_FM_MURAM_AllocMemForce.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/ncsw/Peripherals/FM/extr_fm_muram.c_FM_MURAM_AllocMemForce.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@E_INVALID_HANDLE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"FM MURAM\00", align 1
@ILLEGAL_BASE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @FM_MURAM_AllocMemForce(i64 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_2__*, align 8
  %9 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load i64, i64* %5, align 8
  %11 = inttoptr i64 %10 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %11, %struct.TYPE_2__** %8, align 8
  %12 = load i64, i64* %5, align 8
  %13 = load i32, i32* @E_INVALID_HANDLE, align 4
  %14 = call i32 @SANITY_CHECK_RETURN_VALUE(i64 %12, i32 %13, i32* null)
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i32, i32* @E_INVALID_HANDLE, align 4
  %19 = call i32 @SANITY_CHECK_RETURN_VALUE(i64 %17, i32 %18, i32* null)
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load i32, i32* %6, align 4
  %24 = load i32, i32* %7, align 4
  %25 = call i64 @MM_GetForce(i64 %22, i32 %23, i32 %24, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  store i64 %25, i64* %9, align 8
  %26 = load i64, i64* %9, align 8
  %27 = load i64, i64* @ILLEGAL_BASE, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %30

29:                                               ; preds = %3
  store i8* null, i8** %4, align 8
  br label %33

30:                                               ; preds = %3
  %31 = load i64, i64* %9, align 8
  %32 = call i8* @UINT_TO_PTR(i64 %31)
  store i8* %32, i8** %4, align 8
  br label %33

33:                                               ; preds = %30, %29
  %34 = load i8*, i8** %4, align 8
  ret i8* %34
}

declare dso_local i32 @SANITY_CHECK_RETURN_VALUE(i64, i32, i32*) #1

declare dso_local i64 @MM_GetForce(i64, i32, i32, i8*) #1

declare dso_local i8* @UINT_TO_PTR(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
